# chess-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: Chess.cpp  LogManager.cpp  SDLWindow.cpp  helloworld  helloworld.cpp  main.cpp
src/Chess/: Bishop.cpp  Chess.cpp  ChessPiece.cpp  ChessUtils.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
src/LogManager/: LogManager.cpp
src/SDL/: SDLWindow.cpp
src/include/: Chess.h  SDLErrorCodes.h  SDLWindow.h
src/include/Chess/: Bishop.h  Chess.h  ChessPiece.h  ChessUtils.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
src/include/Logger/: LogManager.h
src/include/SDL/: Geometry.h  SDLErrorCodes.h  SDLWindow.h
src/include/Themes/: Theme.h  ThemeManager.h
src/theme/: ThemeManager.cpp
